fix bad display of image error message on smaller screens

--- a/src/components/Image/Image.module.css
+++ b/src/components/Image/Image.module.css
@@ -126,3 +126,8 @@
   margin: 18px 0;
   position: absolute;
 }
+
+.reloadTitleSmaller {
+  composes: reloadTitle;
+  font-size: 17px;
+}
